Fix price spacing to make the description look a little more balanced

--- a/app/ui/components/products/description/ProductDescription.css
+++ b/app/ui/components/products/description/ProductDescription.css
@@ -52,7 +52,8 @@
 .prices {
   font-size: 1.6em;
   font-weight: 600;
-  margin-bottom: 0px;
+  margin-bottom: 10px;
+  display: inline-block;
 }
 
 .reg-price {
